@@ -1,3 +1,8 @@
+2019-09-08  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/questions.R (test_question): New function
+	* man/test_question.Rd: Documentation
+
 2019-09-02  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/questions.R (get_question_details): New function
